adding home page

--- a/index.html
+++ b/index.html
@@ -1,15 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>Web Template</title>
-		<link href="css/reset.css" rel="stylesheet" type="text/css">
-		<link href="css/main.css" rel="stylesheet" type="text/css">
-	</head>
-	<body>
-		<!-- Content Goes Here -->
-		
-		<script src="js/main.js"></script>
-	</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Resolve Beer | Home</title>
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Hind:wght@600&display=swap" rel="stylesheet">
+
+    <link href="css/reset.css" rel="stylesheet" type="text/css">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+  </head>
+  <body>
+    <!-- Content Goes Here -->
+    <h1 class="hidden">Resolve Beer Home Page</h1>
+
+    <!-- Container Start-->
+    <div id="container">
+
+      <header id="mainHeader">
+        <nav id="mainNav">
+        <h2 class="hidden">Main Navigation</h2>
+            <ul>
+                <li class="selected"><a href="#">HOME</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="products.html">PRODUCTS</a></li>
+                <li><a href="advertisements.html">ADVERTISEMENTS</a></li>
+                <li><a href="purchase.html">PURCHASE</a></li>
+            </ul>
+        </nav>
+        <div id="logo">
+            <img src="images/resolvebeer-logo.svg" alt="Resolve Beer Logo" width="200" height="60">
+        </div>  
+      </header>
+
+      <section id="hero">
+        <h2 class="hidden">Hero Image</h2>
+          <img src="images/placeholder_hero.jpg" alt="Promotional Image" width="1020" height="500">
+      </section>
+
+      <section id="brandIntro">
+        <h2 class="hidden">Brand Introduction</h2>
+        <div id="brandIntroText">
+          <h2>Introducing... Resolve Beer</h2>
+          <div id="underLineHome"></div>
+          <p class="smallText">Introducing a delicious and refreshing pale lager derived from one of the most popular beer recipes in Poland. This stunning beer is the result of the unlikely union with one of the most trusted cleaning brands in the industry. Top notch scientists have collaborated to produce this innovative beer recipe which will not only wow the toughest critic but also impress the staunchest neat freak. Coined "The Pet Lover's Beer", Resolve's full-body and satisfying taste is coupled with a revolutionary and 100% natural ability to remove pet stains. By simply pouring a sip's worth of beer on your carpet, you can avoid the nuisance and hassle of scrubbing and let Resolve do the work. This scientic marvel safely lifts stains from carpet fibres and dries odour-free. This fantastic beer will tantalize your taste buds and allow you to enjoy more quality time with friends, including of course, your furry friend!</p>
+        </div>
+        <div id="brandIntroImage">
+          <img src="images/promoimage_02.jpg" alt="Promotional Image" width="600" height="400">
+        </div>
+      </section>
+
+      <section id="promo">
+        <h2 class="hidden">Promotional Content</h2>
+          <img src="images/people_together.jpg" alt="Promotional Image" width="1020" height="400">
+      </section>
+
+      <footer id="mainFooter">
+        <nav id="footerNav">
+        <h2 class="hidden">Footer Navigation</h2>
+          <ul>
+              <li class="selected"><a href="#">HOME</a></li>
+              <li><a href="about.html">ABOUT</a></li>
+              <li><a href="products.html">PRODUCTS</a></li>
+              <li><a href="advertisements.html">ADVERTISEMENTS</a></li>
+              <li><a href="purchase.html">PURCHASE</a></li>
+          </ul>
+        </nav>
+        <div id="copyRight">
+          <p>&copy; 2021 Resolve</p>
+        </div>
+      </footer>
+
+
+      
+    </div>
+    <!-- Container End -->
+    
+    <script src="js/main.js"></script>
+  </body>
 
 </html>
