adding feature pages

--- a/advertisements.html
+++ b/advertisements.html
@@ -2,12 +2,87 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Web Template</title>
+		<title>Resolve Beer | Advertisements</title>
+
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+    	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    	<link rel="preconnect" href="https://fonts.gstatic.com">
+    	<link href="https://fonts.googleapis.com/css2?family=Hind:wght@600&display=swap" rel="stylesheet">
+    	
 		<link href="css/reset.css" rel="stylesheet" type="text/css">
 		<link href="css/main.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<!-- Content Goes Here -->
+		<h1 class="hidden">Resolve Beer Advertisements Page</h1>
+
+		<!-- Container Start-->
+		<div id="container">
+
+			<header id="mainHeader">
+        		<nav id="mainNav">
+        		<h2 class="hidden">Main Navigation</h2>
+            		<ul>
+		                <li><a href="index.html">HOME</a></li>
+		                <li><a href="about.html">ABOUT</a></li>
+		                <li><a href="products.html">PRODUCTS</a></li>
+		                <li class="selected"><a href="#">ADVERTISEMENTS</a></li>
+		                <li><a href="purchase.html">PURCHASE</a></li>
+            		</ul>
+        		</nav>
+        		<div id="logo">
+            		<img src="images/resolvebeer-logo.svg" alt="Resolve Beer Logo" width="200" height="60">
+        		</div>  
+      		</header>
+
+      		<section class="pageHero">
+				<h2 class="hidden">Hero Image</h2>
+					<img src="images/placeholder_adshero.jpg" alt="Promotional Image" width="1020" height="400">
+			</section>
+
+			<section class="advertisementCon">
+				<h2 class="hidden">Advertisements 1 & 2</h2>
+				<div class="advertisementL">
+					<img src="images/promoimage_04.jpg" alt="Advertisement" width="500" height="300">
+				</div>
+				<div class="advertisementR">
+					<img src="images/promoimage_01.jpg" alt="Advertisement" width="500" height="300">
+				</div>
+			</section>
+
+			<section class="advertisementCon">
+				<h2 class="hidden">Advertisement 3 & 4</h2>
+				<div class="advertisementL">
+					<img src="images/promoimage_05.jpg" alt="Advertisement" width="500" height="300">
+				</div>
+				<div class="advertisementR">
+					<img src="images/promoimage_03.jpg" alt="Advertisement" width="500" height="300">
+				</div>
+			</section>
+			
+
+			
+
+			<footer id="mainFooter">
+            	<nav id="footerNav">
+            	<h2 class="hidden">Footer Navigation</h2>
+              		<ul>
+		                <li><a href="index.html">HOME</a></li>
+		                <li><a href="about.html">ABOUT</a></li>
+		                <li><a href="products.html">PRODUCTS</a></li>
+		                <li class="selected"><a href="#">ADVERTISEMENTS</a></li>
+		                <li><a href="purchase.html">PURCHASE</a></li>
+            		</ul>
+            	</nav>
+              	<div id="copyRight">
+                	<p>&copy; 2021 Resolve</p>
+              	</div>
+          	</footer>
+
+
+			
+		</div>
+		<!-- Container End -->
 		
 		<script src="js/main.js"></script>
 	</body>
