--- a/products.html
+++ b/products.html
@@ -2,12 +2,101 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Web Template</title>
+		<title>Resolve Beer | Products</title>
+
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+    	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    	<link rel="preconnect" href="https://fonts.gstatic.com">
+    	<link href="https://fonts.googleapis.com/css2?family=Hind:wght@600&display=swap" rel="stylesheet">
+    	<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    	
 		<link href="css/reset.css" rel="stylesheet" type="text/css">
 		<link href="css/main.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<!-- Content Goes Here -->
+		<h1 class="hidden">Resolve Beer Products Page</h1>
+
+		<!-- Container Start-->
+		<div id="container">
+
+			<header id="mainHeader">
+        		<nav id="mainNav">
+        		<h2 class="hidden">Main Navigation</h2>
+            		<ul>
+		                <li><a href="index.html">HOME</a></li>
+		                <li><a href="about.html">ABOUT</a></li>
+		                <li class="selected"><a href="#">PRODUCTS</a></li>
+		                <li><a href="advertisements.html">ADVERTISEMENTS</a></li>
+		                <li><a href="purchase.html">PURCHASE</a></li>
+            		</ul>
+        		</nav>
+        		<div id="logo">
+            		<img src="images/resolvebeer-logo.svg" alt="Resolve Beer Logo" width="200" height="60">
+        		</div>  
+      		</header>
+
+			<section class="pageHero">
+				<h2 class="hidden">Hero Image</h2>
+					<img src="images/placeholder_pourbeer.jpg" alt="Promotional Image" width="1020" height="400">
+			</section>
+
+			<section class="product">
+				<h2 class="hidden">Product 1</h2>
+				<div class="productText">
+					<h2 class="productName">Jasne Pelne</h2>
+					<p>Oprócz słodu, chmielu i wody, najważniejszy składnik Tyskiego stanowią od zawsze… piwowarzy. Pokolenia browarników z Tyskich Browarów Książęcych dbają o najlepszy smak „Złota z Tych” już nieprzerwanie od 400-tu lat. Jako wzorcowy polski lager Tyskie ma zawsze pianę „na dwa palce”, złocistą barwę i idealnie wyważony smak między słodyczą a goryczą.</p>
+				</div>
+				<div class="productImage">
+					<img src="images/jasnepelne_background.jpg" alt="Product" width="710" height="350">
+				</div>				
+			</section>
+
+			<section class="product">
+				<h2 class="hidden">Product 2</h2>
+				<div class="productImage">
+					<img src="images/palone_background.jpg" alt="Product" width="710" height="350">
+				</div>
+				<div class="productText">
+					<h2 class="productName">Palone</h2>
+					<p>Tyskie Palone opiera się na hicie z lat 70. – lekkim ciemnym piwie Kuracyjnym warzonym na Śląsku. Jego recepturę charakteryzuje kompozycja słodów jęczmiennych: palonego, karmelowego, monachijskiego oraz jasnego. Palone to lekki ciemny lager z nutami kawowymi i karmelowymi.</p>
+				</div>
+			</section>
+
+			<section class="product">
+				<h2 class="hidden">Product 3</h2>
+				<div class="productText">
+					<h2 class="productName">Pilzne</h2>
+					<p>Tyskie Pilzne to ukłon w kierunku lagerów pilzneńskich warzonych w Tychach w latach 20. ubiegłego wieku. Do jego uwarzenia zastosowano dawną metodę zacierania: dekokcję. Pilzne cechuje wyraźna goryczka oraz klarowna, złocista barwa.</p>
+				</div>
+				<div class="productImage">
+					<img src="images/pilzne_background.jpg" alt="Product" width="710" height="350">
+				</div>
+			</section>
+
+			
+
+			<footer id="mainFooter">
+            	<nav id="footerNav">
+            	<h2 class="hidden">Footer Navigation</h2>
+              		<ul>
+		                <li><a href="index.html">HOME</a></li>
+		                <li><a href="about.html">ABOUT</a></li>
+		                <li class="selected"><a href="#">PRODUCTS</a></li>
+		                <li><a href="advertisements.html">ADVERTISEMENTS</a></li>
+		                <li><a href="purchase.html">PURCHASE</a></li>
+            		</ul>
+            	</nav>
+              	<div id="copyRight">
+                	<p>&copy; 2021 Resolve</p>
+              	</div>
+          	</footer>
+
+
+			
+		</div>
+		<!-- Container End -->
 		
 		<script src="js/main.js"></script>
 	</body>
