--- a/about.html
+++ b/about.html
@@ -2,12 +2,79 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Web Template</title>
+		<title>Resolve Beer | About</title>
+
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+    	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    	<link rel="preconnect" href="https://fonts.gstatic.com">
+    	<link href="https://fonts.googleapis.com/css2?family=Hind:wght@600&display=swap" rel="stylesheet">
+
 		<link href="css/reset.css" rel="stylesheet" type="text/css">
 		<link href="css/main.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<!-- Content Goes Here -->
+		<h1 class="hidden">Resolve Beer About Page</h1>
+
+		<!-- Container Start-->
+		<div id="container">
+
+			<header id="mainHeader">
+        		<nav id="mainNav">
+        		<h2 class="hidden">Main Navigation</h2>
+            		<ul>
+		                <li><a href="index.html">HOME</a></li>
+		                <li class="selected"><a href="#">ABOUT</a></li>
+		                <li><a href="products.html">PRODUCTS</a></li>
+		                <li><a href="advertisements.html">ADVERTISEMENTS</a></li>
+		                <li><a href="purchase.html">PURCHASE</a></li>
+            		</ul>
+        		</nav>
+        		<div id="logo">
+            		<img src="images/resolvebeer-logo.svg" alt="Resolve Beer Logo" width="200" height="60">
+        		</div>  
+      		</header>
+
+			<section class="pageHero">
+				<h2 class="hidden">Hero Image</h2>
+					<img src="images/placeholder_aboutpage.jpg" alt="Promotional Image" width="1020" height="400">
+			</section>
+
+			<section id="about">
+				<h2 class="hidden">About the Brand</h2>
+				<div id="aboutImage">
+					<img src="images/pet_lovers.jpg" alt="Resolve Beer Bottle Design" width="300" height="350">
+				</div>
+				<div id="aboutText">
+					<h2>Who We Are & What We Stand For <br>(And Our Love For Pets)</h2>
+					<div id="underLineAbout"></div>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit at imperdiet dui accumsan sit amet nulla facilisi morbi. Turpis massa sed elementum tempus egestas sed sed. Mauris commodo quis imperdiet massa tincidunt nunc. Sit amet luctus venenatis lectus. Purus non enim praesent elementum facilisis leo vel fringilla. Amet nisl purus in mollis nunc sed id. Amet aliquam id diam maecenas ultricies. Ultrices tincidunt arcu non sodales neque sodales ut etiam. Nec sagittis aliquam malesuada bibendum arcu vitae elementum. Parturient montes nascetur ridiculus mus mauris. Diam in arcu cursus euismod quis viverra nibh cras pulvinar. Viverra adipiscing at in tellus integer feugiat scelerisque varius morbi. Vulputate ut pharetra sit amet.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit at imperdiet dui accumsan sit amet nulla facilisi morbi. Turpis massa sed elementum tempus egestas sed sed. Mauris commodo quis imperdiet massa tincidunt nunc. Sit amet luctus venenatis lectus. Purus non enim praesent elementum facilisis leo vel fringilla. Amet nisl purus in mollis nunc sed id. Amet aliquam id diam maecenas ultricies. Ultrices tincidunt arcu non sodales neque sodales ut etiam. Nec sagittis aliquam malesuada bibendum arcu vitae elementum. Parturient montes nascetur ridiculus mus mauris. Diam in arcu cursus euismod quis viverra nibh cras pulvinar. Viverra adipiscing at in tellus integer feugiat scelerisque varius morbi. Vulputate ut pharetra sit amet.</p>
+				</div>				
+			</section>
+
+			
+
+			<footer id="mainFooter">
+            	<nav id="footerNav">
+            	<h2 class="hidden">Footer Navigation</h2>
+              		<ul>
+		                <li><a href="index.html">HOME</a></li>
+		                <li class="selected"><a href="about.html">ABOUT</a></li>
+		                <li><a href="products.html">PRODUCTS</a></li>
+		                <li><a href="advertisements.html">ADVERTISEMENTS</a></li>
+		                <li><a href="purchase.html">PURCHASE</a></li>
+            		</ul>
+            	</nav>
+              	<div id="copyRight">
+                	<p>&copy; 2021 Resolve</p>
+              	</div>
+          	</footer>
+
+
+			
+		</div>
+		<!-- Container End -->
 		
 		<script src="js/main.js"></script>
 	</body>
